--- a/Parka/UI/Web.config
+++ b/Parka/UI/Web.config
@@ -60,4 +60,13 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
+
+  <connectionStrings>
+    <add name="EFDbContext"
+         connectionString="server=localhost\sqlexpress;database=Parka;trusted_connection=true"
+         providerName ="System.Data.SqlClient" />
+  </connectionStrings>
+   
+  
 </configuration>
