--- a/Parka/UI/Views/web.config
+++ b/Parka/UI/Views/web.config
@@ -13,10 +13,12 @@
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
         <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="UI" />
+        <add namespace="UI.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
